# MAMU_classifier

./: .gitignore  HJA_classifier.ipynb  README.md  file_inference.py  pyproject.toml  train_classifier.py
BirdNET/: analyze.py  audio.py  config.py  embeddings.py  model.py
classifier/: utilities.py
classifier/checkpoints/: v_0.h5
data/clean/: 21-5T_test.csv  Empidonax-difficilis-509624.csv  KLA_15404_1_20210330_072023.csv  OLY_38624-3_20210509_045048.csv
