[tool.poetry]
name = "hja_birdnet_transfer"
version = "0.1.0"
description = ""
authors = ["MJWeldy <matthewjweldy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "^2.10.0"
librosa = "^0.9.2"
matplotlib = "^3.5.3"
argparse = "^1.4.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
